--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <head tag="Rohan Shahane, Data Architect">
+  <head tag="https://www.linkedin.com/in/rohan-shahane-ba876b55">
     <H1>Rohan Shahane</H1>
   </head>
 </html>
