--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
-  <head tag="https://www.linkedin.com/in/rohan-shahane-ba876b55">
+  <head tag="https://www.linkedin.com/in/rohan-shahane-ba876b55, Rohan Shahane">
     <title>Rohan Shahane</title>
-    <meta name="Rohan Shahane" content="<meta name="description" content="Buy high-quality bicycle parts and save money while riding through Nevada.">
+    <meta name="Rohan Shahane" content="Buy high-quality bicycle parts and save money while riding through Nevada.">
     <H1>Rohan Shahane</H1>
   </head>
 </html>
